# toss-api-quant-bot

./: .gitignore  README.md  TODO.md  pyproject.toml
config/: backtest.yaml  backtest_gates.yaml  invariants.yaml  runtime.yaml
config/grids/: dual-momentum.yaml  momentum-core.yaml
docs/: INVESTMENT_KNOWLEDGE.md
ops/: com.quantbot.paper.plist  crontab.example
src/quantbot/: __init__.py  _canon.py  _yaml.py  cli.py
src/quantbot/adapter/: __init__.py  acct.py  broker.py  contracts.py  fills.py  health.py  ledger.py  md.py  mkt.py  order.py  proc.py  stream.py  wl.py
src/quantbot/backtest/: __init__.py  config.py  costs.py  data.py  judge.py  prereg.py  sim.py  walkforward.py
src/quantbot/collect/: __init__.py  flows_snapshot.py
src/quantbot/engine/: __init__.py  approval.py  caps.py  gate.py  (+7 more)
strategies/: dual-momentum.v1.yaml  dual-momentum.v2.yaml  dual-momentum.v3.yaml  momentum-core.v1.yaml  momentum-core.v2.yaml  momentum-core.v3.yaml
tests/: conftest.py  fake_tossctl.py  test_adapter_contracts.py  test_adapter_md_broker.py  test_adapter_proc.py  test_architecture.py  test_backtest_units.py  test_broker.py  test_caps_gate.py  test_cli.py  test_flows_snapshot.py  test_hardening.py  test_interface.py  test_invariants.py  test_judge.py  test_knowledge_slots.py  test_lookahead.py  test_official_http.py  test_official_surfaces.py  test_paperops.py  test_prereg.py  test_registry.py  test_reproducibility.py  test_scheduler.py  test_strategy.py  test_tossctl_adapter.py  test_watcher_reconcile.py  test_yaml_subset.py
universe/: us.yaml  us_etf.yaml
(+51 files in other folders)
